--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "Siti": {
            "StreamingCommunity": {
-               "url": "https://streamingcommunity.paris",
+               "url": "https://streamingcommunity.airforce",
                "SC_ForwardProxy": "0",
                "SC_PROXY": "0",
                "VX_ForwardProxy": "0",
@@ -30,7 +30,7 @@
               "enabled":"1"
           },
           "CB01":{
-              "url":"https://cb01new.loan",
+              "url":"https://cb01net.com",
               "CB_PROXY":"0",
               "CB_ForwardProxy":"0",
               "MX_ForwardProxy":"0",
@@ -39,12 +39,13 @@
           },
           "DDLStream":{
               "url":"https://ddlstreamitaly.co",
-              "cookies" : {
-                  "ips4_device_key": null,
-                  "ips4_IPSSessionFront": null,
-                  "ips4_member_id": null,
-                  "ips4_login_key": null
-                  },
+                 "cookies": {
+                 "ips4_device_key": "1496c03312d318b557ff53512202e757",
+                 "ips4_IPSSessionFront": "d9ace0029696972877e2a5e3614a333b",
+                 "ips4_member_id": "4030088",
+                 "ips4_login_key": "71a501781ba479dfb91b40147e637daf"
+                 },
+
               "enabled":"1"
           },
           "Guardaserie":{
