--- a/config.json
+++ b/config.json
@@ -9,13 +9,13 @@
                "enabled": "1"
            },
            "Filmpertutti": {
-               "url": "https://filmpertutti.motorcycles",
+               "url": "https://filmpertutti.pizza",
                "enabled": "1"
            },
            "Tantifilm":{
-               "url": "https://www.tanti.bond",
+               "url": "https://tantifilm.living",
                "TF_ForwardProxy": "0",
-               "TF_PROXY": "0",
+               "TF_PROXY": "1",
                "enabled": "1"
            },
            "Mysterius":{
@@ -52,13 +52,13 @@
               "url":"https://guardaserietv.mom",
               "enabled":"1",
               "GS_ForwardProxy":"0",
-              "GS_PROXY":"0"
+              "GS_PROXY":"1"
           },
           "GuardaHD":{
               "url":"https://mostraguarda.stream",
               "enabled":"1",
               "GH_ForwardProxy":"0",
-              "GH_PROXY":"0"
+              "GH_PROXY":"1"
           },
           "Onlineserietv":{
               "domain":"com",
